--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ streamlit==0.62
 pickle4==0.0.1
 sklearn==0.0
 matplotlib==3.2.2
-json5==0.9.5
+seaborn==0.11.1
+statsmodels==0.12.1
+scipy==1.5.4
+imblearn==0.0
